--- a/test/Drug Facts Table - Draft.htm
+++ b/test/Drug Facts Table - Draft.htm
@@ -19,7 +19,7 @@
           content="Find the latest results from the Government's drug and health product inspections.">
 
     <META name="dcterms.subject" title="scheme" content="">
-    <META name="dcterms.creator" content="Government of Canada, Health Canada and the Public health Agency of Canada">
+    <META name="dcterms.creator" content="Facts taobe">
 
     <META name="dcterms.contributor" content="">
     <META name="dcterms.type" title="gctype" content="">
