PB forms - deploy security fix to DEV

--- a/dossier/dossierEXT-en.html
+++ b/dossier/dossierEXT-en.html
@@ -4,8 +4,8 @@
 <!--<![endif]-->
 <head>
 
-    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-en.js"></script>
-    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/soyutils.js"></script>
+    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-en.js" integrity="sha384-TbuUhjdK87w2fnJ6rzs4lyzeCkgXpRRJ06EQ9juBYHO3viIaq2UBD+xuuV+L9FvE" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/soyutils.js" integrity="sha384-32eoaED5PWLqUcm/SmCNYkjyLGbZouGKcA7SqNkg4pw/HO5GQvYe41sFH2Gurff2" crossorigin="anonymous"></script>
     <script type="text/javascript">
         document.write(wet.builder.refTop({
             cdnEnv:"prod"
@@ -35,7 +35,7 @@
     <link href="./../GCWeb/assets/favicon.ico" rel="shortcut icon"/>
 
     <link rel="stylesheet" href="./../GCWeb/css/ie8-theme.min.css"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" integrity="sha384-UM1JrZIpBwVf5jj9dTKVvGiiZPZTLVoq4sfdvIe9SBumsvCuv6AHDNtEiIb5h1kU" crossorigin="anonymous"></script>
     <script src="./../wet-boew/js/ie8-wet-boew.min.js"></script>
 
 
@@ -125,7 +125,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2019-03-28",
+            dateModified:"2019-05-10",
             showShare:false,
             showFeedback:false
         })
@@ -169,7 +169,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/dossierAppEXT-en_20190328_1609.min.js"></script>
+<script src="app/scripts/dossierAppEXT-en_20190510_1415.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
